--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -54,6 +54,79 @@
 						<h1>News</h1>
 						<span class="image main"><img src="images/julius-drost-nsrSyI-JUYg-unsplashBanner.jpeg" alt="Photo of a person reading a newspaper. Superimposed on a blurred forest background." /></span>
 
+					<!-- begin day10 summary -->
+					<section id="day1">
+						<div class="container col-md-12">
+							
+							<h2 class="text-center">Day10</h2>
+							<p>
+								We made it to the last day! We'd like to thank and congratulate our students for their energy and enthusiasm; our students' parents for their ongoing support and encouragement; our mentors for making each day exciting, engaging, and entertaining; and our team for their organization, coordination and commitment to making this a reality. Without you all, we wouldn't be here.
+							</p>
+							<p>
+								By now, you've made it through all of the content we've covered in our two-week program! You've made it through the basic commands, through loops and functions, and now through variables, inputs, and parameters. These are major foundations of all programming and we're so proud of the progress you've made! Keep up the amazing work moving forward.
+							</p>
+							<p>
+								Before we dive into a full recap of our last meeting, we've got a few announcements.
+							</p>
+
+
+							<!-- announcements -->
+							<h4 class="text-center">Announcements</h4>
+							<ul>
+
+								<h4>1. Looking Back</h4>
+								<p>
+									Can you believe we have one day lef? Time flies when you're having fun! So far, we've covered the basics of Python, For Loops and function reviews, and Variables, Inputs, and Parameters!
+									Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
+								</p>
+								<h4>2. Looking Ahead</h4>
+								<p>
+									Remember that <b>we meet every day from 16:30-18:00 TRT through the 10th of June!</b> 
+								</p>
+								<h4>3. Survey</h4>
+								<p>
+									We need your feedback to make MSUxIzmirSev the best it can be. It shouldn't take more than 5 minutes <a href="https://forms.gle/gZKBnv4Jz8anFw7A7">Parent Survey</a> and <a href="https://forms.gle/gZKBnv4Jz8anFw7A7">Post-Participant Survey</a>.
+								</p>
+								<h4>4. Certificates</h4>
+								<p>
+									Again, congratulations on all the students hard work. We are so proud of you guys. <a href="https://drive.google.com/file/d/16d6vXz5a0nES4fqr1msBcILM9aAQzrm-/view">Certicates</a> will be emailed out to the parents!
+								</p>
+								<h4>5. Questions?</h4>
+								<p>
+									As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:turkeycc@egr.msu.edu">turkeycc@egr.msu.edu</a>.
+								</p>
+							</ul>
+
+							<!-- meeting recap -->
+							<h4 class="text-center">Meeting Recap</h4>
+							<p>
+								Our last meeting was an absolute blast, featuring our <a href="https://docs.google.com/presentation/d/1YvYn8WAq-izeoHDAN0ZTXHY2aVwP6WSTKAx0njKAJYc/edit?usp=sharing">Final Project Showcase</a>. Meeting 1 included a Zoom orientation and program overview, Meeting 2 included an Intro to Python Review, Meeting 3 introudced For Loops, and Meeting 4 included a For Loops Review, Meeting 5 introduced Functions, Meeting 6 included a Functions Review with some new information, Meeting 7 included Variables, Input, and Parameters, Day 8 included a Variables, Input, and Parameters review, Day 9 included a Kahoot and Final Project work time, and Meeting 10 included our Final Project Showcase!
+							</p>
+							<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+								<div class="row">
+									<iframe src="https://docs.google.com/presentation/d/1YvYn8WAq-izeoHDAN0ZTXHY2aVwP6WSTKAx0njKAJYc/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="100%" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+								</div>
+								<br>
+							</div>
+							<p>
+								<a href="https://docs.google.com/presentation/d/1YvYn8WAq-izeoHDAN0ZTXHY2aVwP6WSTKAx0njKAJYc/edit#slide=id.g10da1c2d55c_0_0"><b>Final Presentations</b></a>
+							</p>
+							<p>
+								Again, we are SO proud of you guys! 
+							</p>
+							<span class="image main"><img src="images/Screenshot 2022-06-10 161045.png" alt="Photo of Everyone!"></span>
+							<p>
+
+							</p>
+								<!-- closure -->
+								<p>
+									That's all for the Summer MSUxIzmirSev, Students—it's been a pleasure working with each and every one of you, and we hope you've had as much fun as we have. From the bottom of our hearts, we thank you for bearing with us through the first-ever virtual MSUxIzmirSev Coding Club—your enthusiasm, energy, and smiles are the reason we love to do what we do. We've found joy in the community that MSUxIzmirSev has brought during these trying times, and with solace in the normalcy it has restored. Before we know it, we'll be back in person—but in the meantime, we're glad we were able to make the most of the circumstances.
+									<br>
+									<b>-The MSU x Izmir Sev Team</b>
+								</p>
+							</div>
+						</section>
+						<!-- end day 10 summary -->		
 					<!-- begin day9 summary -->
 					<section id="day1">
 						<div class="container col-md-12">
@@ -66,7 +139,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our fourth meeting, we've got a few announcements.
+								Before we dive into a full recap of our ninth meeting, we've got a few announcements.
 							</p>
 
 
@@ -156,7 +229,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our fourth meeting, we've got a few announcements.
+								Before we dive into a full recap of our eighth meeting, we've got a few announcements.
 							</p>
 
 
@@ -261,7 +334,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our fourth meeting, we've got a few announcements.
+								Before we dive into a full recap of our seventh meeting, we've got a few announcements.
 							</p>
 
 
@@ -291,7 +364,7 @@
 								Our seventh meeting was an absolute blast, featuring a spotlight, collaborative code-alongs, and hands-on exercises. Meeting 1 included a Zoom orientation and program overview, Meeting 2 included an Intro to Python Review, Meeting 3 introudced For Loops, Meeting 4 included a For Loops Review, Meeting 5 included functions, Meeting 6 included a functions review, and Meeting 7 included Variables, Input, and Parameters!
 							</p>
 							<p>
-								On Day 7, we had the honor of welcoming our amazing live spotlight <b>Gigi Padelec!</b>. Gigi is an MSU alum who just graduated from MSU College of Engineering with a B.S in Computer Science. She is working at <a href="https://www.ostusa.com/" target="_blank">Microsoft,</a> as an incoming Program Manager/Software Engineer! Gigi has worked on multiple outreach programs here at MSU!
+								On Day 7, we had the honor of welcoming our amazing live spotlight <b>Gigi Padelec!</b>. Gigi is an MSU alum who just graduated from MSU College of Engineering with a B.S in Computer Science. She is working at <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft,</a> as an incoming Program Manager/Software Engineer! Gigi has worked on multiple outreach programs here at MSU!
 							</p>
 							<p>
 								Thank you for your time, Gigi!
@@ -383,7 +456,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our fourth meeting, we've got a few announcements.
+								Before we dive into a full recap of our sixth meeting, we've got a few announcements.
 							</p>
 
 
@@ -489,7 +562,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our first meeting, we've got a few announcements.
+								Before we dive into a full recap of our fifth meeting, we've got a few announcements.
 							</p>
 
 
@@ -708,7 +781,7 @@
 								Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 							</p>
 							<p>
-								Before we dive into a full recap of our first meeting, we've got a few announcements.
+								Before we dive into a full recap of our third meeting, we've got a few announcements.
 							</p>
 
 
@@ -783,7 +856,7 @@
 									Computer Science is challenging and exciting, learning to code is so important to teach students how to communicate and think logically. Coding helps students understand the world around them better. Coding fosters creativity and allows students to apply their creative thinking skills. Joining the MSU x Izmir Sev Coding Club is a great way to learn these skills in a challenging, engaging, and positive environment. The challenges you overcome, the views you enjoy, and the friends you make are what it's all about. 
 								</p>
 								<p>
-									Before we dive into a full recap of our first meeting, we've got a few announcements.
+									Before we dive into a full recap of our second meeting, we've got a few announcements.
 								</p>
 
 
