newsletter final touches

--- a/turkeycc/news.html
+++ b/turkeycc/news.html
@@ -89,7 +89,7 @@
 								</p>
 								<h4>4. Certificates</h4>
 								<p>
-									Again, congratulations on all the students hard work. We are so proud of you guys. <a href="https://drive.google.com/file/d/16d6vXz5a0nES4fqr1msBcILM9aAQzrm-/view">Certicates</a> will be emailed out to the parents!
+									Again, congratulations on all the students hard work. We are so proud of you guys. <a href="https://drive.google.com/file/d/16d6vXz5a0nES4fqr1msBcILM9aAQzrm-/view">Certificates</a> will be emailed out to the parents!
 								</p>
 								<h4>5. Questions?</h4>
 								<p>
@@ -711,7 +711,7 @@
 							<!-- meeting recap -->
 							<h4 class="text-center">Meeting Recap</h4>
 							<p>
-								Our fourth meeting was an absolute blast, featuring a spotlight, collaborative code-alongs, and hands-on exercises. Meeting 1 included a Zoom orientation and program overview, Meeting 2 included an Intro to Python Review, Meeting 3 introudced For Loops, and Meeting 4 included a For Loops Review!
+								Our fourth meeting was an absolute blast, featuring a spotlight, collaborative code-alongs, and hands-on exercises. Meeting 1 included a Zoom orientation and program overview, Meeting 2 included an Intro to Python Review, Meeting 3 introduced For Loops, and Meeting 4 included a For Loops Review!
 							</p>
 							<p>
 								On Day 4, we had the honor of welcoming our amazing live spotlight <b>Hannah Striebel!</b>. Hannah is an MSU alum who graduated from MSU College of Engineering with a B.S in Computer Science. She is working at <a href="https://www.ostusa.com/" target="_blank">OST,</a> a technology company located in Grand Rapids, Michigan!
