--- a/summer22/index.html
+++ b/summer22/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>MSU x İzmir SEV Coding Club</title>
+		<title>CSE K12 Outreach Training FS22</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
