--- a/summer22/index.html
+++ b/summer22/index.html
@@ -19,7 +19,7 @@
 				<header id="header" class="alt">
 
 					<!-- Logo -->
-					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
+					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> FS22</span> CSE K12 Outreach Training</a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -30,7 +30,7 @@
 									<li><a href="news.html">News</a></li>
 									<li><a href="resources.html">Resources</a></li>
 									<li><a href="tcc_team.html">Team</a></li>
-									<li><a href="supporters.html">Supporters</a></li>
+
 								</ul>
 							</li>
 						</ul>
@@ -47,13 +47,13 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-						<p>Summer <strong>2022</strong>
+						<p>Fall <strong>2022</strong>
 						<br />
 						<br />
 						<header>
-							<h2>MSU x İzmir SEV Coding Club</h2>
+							<h2>CSE K12 Outreach Training</h2>
 						</header>
-						<p><strong>Teach a girl</strong> to code and she will <strong>change the world.</strong>
+						<p><strong>Teach the next set of students</strong>  to lead and they will <strong>change the world.</strong>
 						<br />
 						</p>
 						<footer>
@@ -94,15 +94,15 @@
 								<!-- <div class="col-8 col-12-narrower"> -->
 
 									<header>
-										<h2><strong>Summer 2022 Session</strong></h2>
+										<h2><strong>Fall 2022 Summer Training Session</strong></h2>
 									</header>
-									<p>• May 30 through June 10.
+									<p>• July 25 through August 5.
 									<br />
-									• Monday through Friday 4:30p – 6:00p Turkey time.
+									• Monday through Friday 9:00a – 11:30a Eastern time.
 									<br />
 									<br />
-									The Summer 2022 MSU x Izmir SEV Coding Club will have 30 participants 
-									and will meet virtually in accordance with current MSU policy for Youth Programs. 
+									The Fall 2022 MSU x Izmir SEV Coding Club will have 39 participants 
+									and will meet virtually in accordance with current MSU policy for student Programs. 
 									Participants will receive the Zoom login information by email in the week 
 									before the first meeting. The information will be sent to the email address(es) 
 									provided at registration. Participants should white-list <a href="#">turkeycc@egr.msu.edu</a> to 
