--- a/technovation/index.html
+++ b/technovation/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CSE K12 Outreach Training FS22</title>
+		<title>Virtual Technovation FS22</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 				<header id="header" class="alt">
 
 					<!-- Logo -->
-					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> FS22</span> CSE K12 Outreach Training</a></h1>
+					<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> FS22</span> Virtual Technovation</a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -51,7 +51,7 @@
 						<br />
 						<br />
 						<header>
-							<h2>CSE K12 Outreach Training</h2>
+							<h2>Virtual Technovation</h2>
 						</header>
 						<p><strong>Teach the next set of students</strong>  to lead and they will <strong>change the world.</strong>
 						<br />
@@ -75,7 +75,7 @@
 						<br />	
 						<strong>College of Engineering at Michigan State University </strong>
 						<br />	
-						and <strong> Izmir SEV Coding Clubs</strong></h2>
+						and <strong> CADL</strong></h2>
 						<p>. MSU x Izmir SEV Coding Clubs offer computing instruction designed to be inclusive of all — but especially of 
 						<br />
 						girls and economically underrepresented youth in Turkey. MSU student-mentors guide secondary school-participants 
