--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -330,105 +330,20 @@
 
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
-                    <div class="col-md-4" align="middle"> <!-- Gigi -->
-                        <img class="shadow-lg" src="assets/img/photos/Gigi750x1000_78R.jpg" width=70%>
-                        <br><br>
-                        <p><i>Gigi Padalec (Lead Detroit Mentor)</i></p>
-                    </div>
-                    <div class="col-md-4" align="middle"> <!-- Jonathon -->
-                        <img class="shadow-lg" src="assets/img/photos/FS19Jonathan750x1000_78R.jpg" width=70%>
-                        <br><br>
-                        <p><i>Jonathon Moore (Lead Lansing Mentor)</i></p>
-                    </div>
-                    <div class="col-md-4" align="middle"> <!-- Katie -->
-                        <img class="shadow-lg" src="assets/img/photos/katie750x1000_72R-2.jpg" width=70%>
-                        <br><br>
-                        <p><i>Katie White (Lead All Michigan Mentor)</i></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4" align="left"> <!-- Gigi -->
-                        <p>
-                            <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Computer Science!
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            I became interested in computer science through a similar outreach program to Technovation.
-                        </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            This past summer, I got to work on the tech that keeps Target stores stocked with our favorite items!
-                        </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            In the future, I hope to write code that makes a positive impact on the lives of others.
-                        </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            Remember to take time for yourself.
-                        </p>
-                    </div>
-                    <div class="col-md-4" align="left"> <!-- Jonathon -->
-                        <p>
-                            <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Computer Science and minoring in Game Design!
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            I first became interested in computer science in my first computer science class; I didn't know if I'd like it but I became hooked on the problem solving aspect of it all.
-                        </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            Some of the coolest things I've made with code in the past are the various video games I've made for my classes.
-                        </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to make video games that other people can play and enjoy!
-                        </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            Don't give up and quit! Computer science can be frustrating at times, but nothing feels better than when you finally find the correct solution.
-                        </p>
-                    </div>
-                    <div class="col-md-4" align="left"> <!-- Katie -->
-                        <p>
-                            <b>What are you studying?</b><br>
-                            I'm a third-year student double-majoring in Computer Science and Criminal Justice!
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            Through a <a href="https://scratch.mit.edu/">Scratch</a> demo in my 8th grade science class.
-                        </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            I've used code to create artwork without ever getting out a pencil!
-                        </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            I am in the process of building my own compiler and interpreter (takes code from one language and translates it into another)!
-                        </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            I have yet to find a passion that cannot be combined with coding; I've seen people be computer scientists in careers like fashion, art, running, and even race cars!
-                        </p>
-                    </div>
-                </div><br>
-                <div class="row">
                     <div class="col-md-4" align="middle"> <!-- Trinity -->
                         <img class="shadow-lg" src="assets/img/photos/trinity750x1000_72R.jpg" width=70%>
                         <br><br>
                         <p><i>Trinity Johnson (Lead All Michigan Green Cohort Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Tatiana -->
-                        <img class="shadow-lg" src="assets/img/photos/tatiana.jpg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Jonathon -->
+                        <img class="shadow-lg" src="assets/img/photos/FS19Jonathan750x1000_78R.jpg" width=70%>
                         <br><br>
-                        <p><i>Tatiana Voegerl (Lead Lansing Mentor)</i></p>
+                        <p><i>Jonathon Moore (Lead In-Person Lansing Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Jennifer -->
-                        <img class="shadow-lg" src="assets/img/photos/jennifer750x1000_72R.jpg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Ryan -->
+                        <img class="shadow-lg" src="assets/img/photos/trinity750x1000_72R.jpg" width=70%>
                         <br><br>
-                        <p><i>Jennifer Tran (Lead All Michigan Mentor)</i></p>
+                        <p><i>Ryan Spencer (Lead All Michigan White Cohort Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
@@ -454,60 +369,65 @@
                             Keep your head held high, if not, the crown slips.
                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Tatiana -->
+                    <div class="col-md-4" align="left"> <!-- Jonathon -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a second-year student double-majoring in Computer Science and Information Science, and minoring in Spanish!
+                            I'm a fourth-year student majoring in Computer Science and minoring in Game Design!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I loved my programming class in high school and wanted to learn more!
+                            I first became interested in computer science in my first computer science class; I didn't know if I'd like it but I became hooked on the problem solving aspect of it all.
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            Over the past year, I've helped code artificial intelligence that can play multiple different games.
+                            Some of the coolest things I've made with code in the past are the various video games I've made for my classes.
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            In the future, I'd like to inspire more young coders to pursue computer science and help create a welcoming environment in the industry.
+                            I hope to make video games that other people can play and enjoy!
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Don't be afraid to try something; even if you don't succeed you can learn a lot!
+                            Don't give up and quit! Computer science can be frustrating at times, but nothing feels better than when you finally find the correct solution.
                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Jennifer -->
+                    <div class="col-md-4" align="left"> <!-- Ryan -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a third-year student majoring in Computer Science and minoring in Korean!
+                            I'm a third-year student double-majoring in Computer Science and Criminal Justice!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I enjoy problem solving and I liked how much you can do with Computer Science!
+                            Through a <a href="https://scratch.mit.edu/">Scratch</a> demo in my 8th grade science class.
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I've created a Sparty frogger game with a team for a course project!
+                            I've used code to create artwork without ever getting out a pencil!
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I'm hoping to make something that impacts and benefits people in the future.
+                            I am in the process of building my own compiler and interpreter (takes code from one language and translates it into another)!
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Don't be too hard on yourself if you don't get it the first time!
+                            I have yet to find a passion that cannot be combined with coding; I've seen people be computer scientists in careers like fashion, art, running, and even race cars!
                         </p>
                     </div>
                 </div><br>
                 <div class="row">
-                    <div class="col-md-12" align="middle"> <!-- judy -->
-                        <img class="shadow-lg" src="assets/img/photos/McDonald750x1000_78R.jpg" width=25%>
+                    <div class="col-md-4" align="middle"> <!-- Judy -->
+                        <img class="shadow-lg" src="assets/img/photos/IMG_6326.JPG" width=70%>
                         <br><br>
-                        <p><i>Judy Effendi (Virtual Lead Administrative Mentor )</i></p>
+                        <p><i>Judy Effendi (Virtual Lead Administrative Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Sanaye -->
+                        <img class="shadow-lg" src="assets/img/photos/jennifer750x1000_72R.jpg" width=70%>
+                        <br><br>
+                        <p><i>Sanaye Lewsi (In-Person Lead Administrative Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12" align="left"> <!-- Judy -->
+                    <div class="col-md-4" align="left"> <!-- Judy -->
                         <p>
                             <b>What are you studying?</b><br>
                             I'm a fourth-year student majoring in Computer Science and minoring in Spanish. 
@@ -529,7 +449,29 @@
                             Enjoy the journey.
                         </p>
                     </div>
-                </div>
+                    <div class="col-md-4" align="left"> <!-- Sanaye -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a fourth-year student majoring in Computer Science and minoring in Spanish. 
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I really enjoyed my AP Computer Science Class my Senior year of High School.
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I developed an automated-data-comparator tool during my internship at Target. 
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to become a full-stack developer as well as continue spreading my passion for coding to students all over. 
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Enjoy the journey.
+                        </p>
+                    </div>
+                </div><br>
             </div>
             <p>
                 Here's to eight more weeks of fun ahead of us. The journey has only begun!
