--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -341,7 +341,7 @@
                         <p><i>Jonathon Moore (Lead In-Person Lansing Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Ryan -->
-                        <img class="shadow-lg" src="assets/img/photos/trinity750x1000_72R.jpg" width=70%>
+                        <img class="shadow-lg" src="assets/img/photos/" width=70%>
                         <br><br>
                         <p><i>Ryan Spencer (Lead All Michigan White Cohort Mentor)</i></p>
                     </div>
@@ -421,9 +421,9 @@
                         <p><i>Judy Effendi (Virtual Lead Administrative Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Sanaye -->
-                        <img class="shadow-lg" src="assets/img/photos/jennifer750x1000_72R.jpg" width=70%>
+                        <img class="shadow-lg" src="assets/img/photos/Sanaye_Lewis750x1000_72R.jpeg" width=70%>
                         <br><br>
-                        <p><i>Sanaye Lewsi (In-Person Lead Administrative Mentor)</i></p>
+                        <p><i>Sanaye Lewis (In-Person Lead Administrative Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
